--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-uvicorn
-pandas
-scikit-learn
-pyarrow
+fastapi==0.95.2
+uvicorn==0.22.0
+pandas==2.0.1
+scikit-learn==1.2.2
+pyarrow==12.0.0
